# steering

./: .gitignore  .gitmodules  .mxproject  .project  CMakeLists.txt  flash.sh  openocd.cfg  steering.ioc
CM4/: .cproject  .project  steering_CM4.launch
CM4/Core/Inc/: main.h
CM4/Core/Src/: gpio.c  main.c  stm32h7xx_it.c
CM7/: .cproject  .project  STM32H745XIHX_FLASH.ld  STM32H745XIHX_RAM.ld  steering_CM7.launch
CM7/Core/Inc/: driver_conf.h  lv_conf.h  main.h  mdma.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  tim.h
CM7/Core/Inc/sw/: lvgl_port_lcd.h  lvgl_port_touchpad.h
CM7/Core/Src/: adc.c  dma2d.c  fdcan.c  fmc.c  gpio.c  i2c.c  ltdc.c  main.c  mdma.c  quadspi.c  stm32h7xx_it.c  syscalls.c  tim.c  usart.c
CM7/Core/Src/sw/: lvgl_port_lcd.c  lvgl_port_touchpad.c
CM7/Drivers/Components/ft5336/: ft5336.c  ft5336.h  ft5336_reg.c  ft5336_reg.h
CM7/Drivers/Components/generic/: generic_audio.h  generic_camera.h  generic_dpredriver.h  generic_env_sensor.h  generic_epd.h  generic_idd.h  generic_io.h  generic_lcd.h  generic_motion_sensor.h  generic_pwrmon.h  generic_ts.h  generic_usbtypecswitch.h
CM7/Drivers/Components/mt25tl01g/: mt25tl01g.c  mt25tl01g.h
CM7/Drivers/Components/mt48lc4m32b2/: mt48lc4m32b2.c  mt48lc4m32b2.h
CM7/Drivers/Components/rk043fn48h/: rk043fn48h.h
CM7/Drivers/Steering/driver/: bus.c  bus.h  discovery.c  discovery.h  errno.h  lcd.c  lcd.h  qspi.c  qspi.h  sdram.c  sdram.h  ts.c  ts.h
